--- a/src/sass/layout/_campinginfo.scss
+++ b/src/sass/layout/_campinginfo.scss
@@ -6,9 +6,9 @@
   align-items: center;
   justify-content: center;
   min-height: 40vh;
-  border-top: 3px solid white;
-  border-bottom: 3px solid white;
-  box-shadow: 0px 0px 6px 4px white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  box-shadow: 0px 0px 8px 2px white;
   padding-block: 4rem;
   padding-inline: 1rem;
   margin-top: 2rem;
@@ -25,6 +25,29 @@
 #camping-info-main {
   margin-block: 1rem 8rem;
   margin-inline: 1rem;
+
+  .back-step {
+    max-width: 13rem;
+    border-radius: 5px;
+    padding: 8px;
+    background-color: vars.$neonpurple;
+    margin-block: 2rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-inline: auto;
+    margin-block: 5rem;
+  }
+  #back-link {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    text-align: center;
+  }
+  #arrowleft {
+    font-size: 1.5rem;
+  }
 }
 
 #camping-info-section {
